# Leo-III

./: .gitignore  .gitmodules  AUTHORS  INSTALL.md  Jenkinsfile  LICENSE  Makefile  README.md  USAGE.md  build.sbt  default.nix  ex1.p  leo.sh  leo3.caps  leo3.sh  normalization.sh  pom.xml  test.p  test_choice.p  test_ite.p  todo
Notes/: README.md  TODO  graal  scribble^1  scribble^2
contrib/: TreeLimitedRun  TreeLimitedRun.c  copy-problems  crossverify_starexec  eval_starexec  ltbrun  package_starexec  tptp.g4  tptpStat  unique_starexec  unsolved_starexec
contrib/graalvm/: reflect-config.json  reflectconfig  resource-config.json
contrib/native-image-configs/: reflect-config.json  resource-config.json
contrib/portfolio/: TreeLimitedRun  run_portfolio
demo/deontic/: GDPR.ddl.p  GDPR.modal.p  leo3nitpick
demo/ho/: choice_swap.p  inj_cantor.p  sur_cantor.p
demo/modal/: ex1_semantics.p  ex1_semantics_ho.p  ex2_quantification_bf.p  ex2_quantification_cbf.p  ex3_consequence.p  ex4_countermodels.p  ex5_multimodal_wisemen.p  findCounterModel
demo/poly/: sur_cantor_th1.p
parseTableGeneration/: tptpFormatParams
parseTableGeneration/input/: 0_SyntaxBNF  1_SyntaxBNF_noTerminals.bnf  (+1 more)
project/: build.sbt  plugins.sbt
scripts/: benchmarkParsers.sh  leoexec.sh  remote-leoexec.sh  runTests.sh  testParsers.sh
src/native/: CMakeLists.txt  picosat.c  picosat_config.h
src/native/javah_include/: leo_modules_sat_solver_PicoSAT.h  leo_modules_sat_solver_PicoSAT_SAT__.h  leo_modules_sat_solver_PicoSAT_State.h  leo_modules_sat_solver_PicoSAT_State__.h  leo_modules_sat_solver_PicoSAT_UNSAT__.h  leo_modules_sat_solver_PicoSAT_Unknown__.h  leo_modules_sat_solver_PicoSAT__.h
tptp/: .ex1.p.swp  SUMO.thf  agatha.p  boolext.p  ex1.p  ex2.p  q1.p  simpl.tptp  simplificationTest.tptp  split1.p  test.tptp
(+1115 files in other folders)
